mule-user-guide/v/3.8/oracle-ebs-connector-user-guide.adoc
=  Oracle电子商务套件连接器
:keywords:connector, endpoint, oracle, ebusiness, ebs, pl/sql
：imagesdir：_images

用于Oracle电子商务套件（EBS）的Anypoint Connector提供实时连接，以使用Web服务和消息队列查询和更新Oracle EBS。该连接器是为*Oracle EBS v12.1.x*开发的。对于Oracle EBS 12.2，请参阅 link:/mule-user-guide/v/3.8/oracle-ebs-122-connector[Oracle EBS 12.2连接器]。

阅读本用户指南以了解如何使用连接器设置和配置基本流程。使用 link:/release-notes/oracle-e-business-suite-ebs-connector-release-notes[Oracle电子商务套件（EBS）连接器发行说明]跟踪每个版本的连接器的功能添加，兼容性，限制和API版本更新。使用https://mulesoft.github.io/mule-oracle-ebs-connector/4.0.0/apidocs/mule/oracle-ebs-config.html[Technical Reference]查看连接器的操作和功能，以及{{1 }}。

MuleSoft在 link:/mule-user-guide/v/3.8/anypoint-connectors#connector-categories[_Premium_]支持策略下维护此连接器。

Oracle EBS连接器提供了以下集成功能：

*  *Financial Management and Order Management Modules*：财务和订单管理服务的完整API覆盖范围。
*  *PL/SQL Integration*：可以调用标准PL / SQL或用户定义的PL / SQL。
*  *XML Gateway*：入站和出站，发送和接收来自EBS的消息。
*  *Business Events*：通过`WF_JMS_JMS_OUT`主题在EBS中触发事件时接收消息的功能。

支持的Web服务端点的完整列表可以在<<Supported Web Service Endpoints,here>>中找到。

== 先决条件

由于连接器与Oracle EBS耦合程度如何，本文假设您具有：

*  Oracle EBS的工作知识。
* 阅读有关Oracle EBS版本的Web服务和集成方案的相关文档。

[TIP]
此处使用的Oracle EBS术语和概念的定义和详细说明可以在Oracle安装的Oracle文档集中免费获得。


本文档假定您熟悉Mule，
link:/mule-user-guide/v/3.8/anypoint-connectors[Anypoint连接器]和
link:/anypoint-studio/v/6/index[Anypoint Studio Essentials]。要提高您对Studio的熟悉度，请考虑完成 link:/anypoint-studio/v/6/basic-studio-tutorial[Anypoint Studio教程]。此页面需要一些 link:/mule-user-guide/v/3.8/mule-concepts[骡子概念]， link:/mule-user-guide/v/3.8/elements-in-a-mule-flow[骡子流中的元素]和 link:/mule-user-guide/v/3.8/global-elements[全球元素]的基本知识。

=== 硬件和软件要求

有关硬件和软件要求，请访问 link:/mule-user-guide/v/3.8/hardware-and-software-requirements[硬件和软件要求]页面。


要使用Oracle EBS连接器，您必须具备以下条件：

*  *Java 7*：除非您将Java 1.7.0_x用作JRE，否则Oracle EBS连接器不起作用
*  *Web service configuration in Oracle EBS*：配置Oracle EBS连接器需要在Oracle EBS中配置Web服务并通过Integration Repository进行公开
*  *FND_WEB_SEC PL/SQL Service*：连接器要求Oracle EBS部署FND_WEB_SEC PL / SQL服务
*  *Anypoint Studio*

== 兼容性

Oracle EBS Connector 4.0.0兼容于：

[%header,cols="2*a"]
|===
|应用/服务|版本
| *Mule Runtime*  | 3.7或更高
| *Anypoint Studio*  | 5.2.1或更高版本
| *Oracle EBS*  | 12.1.x
| *Java*  | 7
|===

[IMPORTANT]
请注意，此连接器仅支持具有SOA网关的EBS版本12.1.x。由于Oracle更改许可证，版本12.2.x不随SOA Gateway提供，因此不适用于此连接器。

== 连接器体系结构

Oracle EBS提供不同的技术或产品来解决各种类型的集成。下面列出的是与企业应用程序集成最广泛的应用程序：

. 以数据为中心的集成。
. 使用Oracle业务事件系统和XML网关队列进行事件驱动的集成。
. 使用集成SOA网关通过Web服务进行集成。

下图显示了MuleSoft Oracle EBS连接器的集成体系结构：

image:oracle_ebs_connector_architecture.png[oracle_ebs_connector_architecture]

转到 link:https://docs.oracle.com/cd/E18727_01/index.htm[Oracle电子商务套件文档Web库]以获取更多信息。

== 安装和配置

以下各节介绍如何安装和配置MuleSoft Oracle EBS连接器。

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

要在生产环境中使用Oracle EBS连接器，您必须具有：

* 使用Mule的企业许可证
*  CloudHub Starter，Professional或Enterprise帐户

请联系mailto：info@mulesoft.com [MuleSoft销售团队]获取其中任何一个。在 link:/mule-user-guide/v/3.8/installing-an-enterprise-license[安装企业许可证]中详细了解。


== 创建一个新项目

要在Mule应用程序中使用Oracle EBS连接器，请先在Anypoint Studio中创建一个新的Mule项目：

. 在Anypoint Studio中，点击*File*> *New*> *Mule Project*。
. 为您的新项目输入一个名称，并将其余选项保留为默认值。
+
image:new-proj.png[新项目img]
+
. 如果您计划使用Git，请为Studio项目选择*Create a .gitignore file*，然后单击*Next.*
+
. 点击*Next*，确认Java 1.7已设置为您的默认设置
  JRE。
 +
image:java7check.png[javacheck]
+
. 点击*Finish*创建项目。

== 配置Oracle EBS全局元素

要在Mule应用程序中使用Oracle EBS连接器，您必须配置一个全局Oracle EBS元素，该应用程序中的所有Oracle EBS连接器均可使用该元素（请阅读有关 link:/mule-user-guide/v/3.7/global-elements[全球元素]的更多信息）。
全球元素可以有三种类型：

.  _ Configuration_：用于Web服务和PL / SQL调用。
用于Business Events和XML Gateway的.  _ JMS Configuration_：出站订阅使用数据库主机，端口和SID的单独字段。
.  _ JMS URL Configuration_：用于Business Events和XML Gateway出站订阅，使用数据库URL。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
Follow these steps to create an Oracle EBS global element for web services and PL/SQL invocation:

. Click the *Global Elements* tab at the base of the canvas.
. On the Global Mule Configuration Elements screen, click *Create*.
. In the *Choose Global Type wizard*, expand *Connector Configuration*, and then select *OracleEBS: Configuration*.
+
image:oracle_ebs_connector_config.png[oracle_ebs_connector_config]
+
. Click *OK*.
. Configure the parameters according to the table below.
+
[%header,cols="2*a"]

|===
|Field|Description
|*Name* |Enter a name for the configuration with which it can be referenced later.
|*Username* |Username to log into Oracle EBS web services.
|*Password* |Password for the username.
|*Host* |Enter the host of the Oracle EBS instance.
|*Port* |Enter the port of the Oracle EBS web services.
|*SSL* |If enabled, will attempt to make web services calls using HTTPS instead of HTTP.
|*TrustStore file name* |Enter the path to a custom TrustStore for HTTPS calls (optional).
|*TrustStore password* |Enter the password for the TrustStore (optional).
|*Disable Common Name Checking* |Disables Common Name (CN) Checking on SSL certificates (optional).
|*Responsibility Name* |Enter the responsibility name that is needed to execute the operation.
|*Responsibility Appl. Name* |Enter the application short name that is needed to execute the operation.
|*Security Group Name* |Enter the security group key of the Oracle EBS instance (optional). Default value is *STANDARD*.
|*NLS language* |Enter the NLS language of the Oracle EBS instance (optional). Default value is *AMERICAN*.
|*Org. ID* |Enter the organization ID of the Oracle EBS instance (optional). Default value is *204*.
|===
+
image:oracle_ebs_global_element.png[oracle_ebs_global_element]
+
. Configure your custom web services list according to the steps below:
.. Select *Create Object manually* and then click the `...` button next to it.
+
image:oracle-create-object-1.png[create-object-1]
+
.. In the pop-up window, select the plus sign (*+*) to add more entries, as needed.
.. Right-click a metadata item and click *Edit the selected metadata field* to enter the values.
+
image:oracle_ebs_enter_metadata.png[oracle_ebs_enter_metadata]
+
.. Click *OK* to save the list.
+
. Click *Test Connection* and confirm receipt of the _Connection Successful_ message.
. Click *OK* to save the global connector configurations.
+
[IMPORTANT]
Sometimes, it is necessary to create more than one global configuration. It depends on how the Oracle EBS instance is configured. One possible scenario would be to have one configuration for executing web service operations and another one for PL/SQL operations.

....
[tab,title="XML Editor"]
....
Ensure you have included the Oracle EBS namespaces in your configuration file.

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
xmlns:oracle-ebs = " http://www.mulesoft.org/schema/mule/oracle-ebs" 
xsi:schemaLocation="
http: //www.mulesoft.org/schema/mule/core
http: //www.mulesoft.org/schema/mule/core/current/mule.xsd
 http://www.mulesoft.org/schema/mule/oracle-ebs http://www.mulesoft.org/schema/mule/oracle-ebs/current/mule-oracle-ebs.xsd
<!-- Add your flows and configuration elements here -->
</mule>
----

Follow these steps to configure a Oracle EBS connector in your application:

. Create a global Oracle EBS configuration outside and above your flows, using the following global configuration code.
+
[source, xml, linenums]
----
<oracle-ebs:config name="OracleEBS__Configuration" username="${username}" password="${password}" host="${host}" port="${port}" responsibilityName="${responsibilityName}" responsibilityApplName="${responsibilityApplName}" doc:name="OracleEBS: Configuration" disableCNCheck="true" sslEnabled="true" trustStorePassword="${tsPassword}" trustStorePath="TrustStore.ts"/>
----
+
[%autowidth.spread]
|===
|*Parameter* |*Description*
|*Name* |Enter a name for the configuration with which it can be referenced later.
|*Username* |Username to log into Oracle EBS web services.
|*Password* |Password for the username.
|*Host* |Enter the host of the Oracle EBS instance.
|*Port* |Enter the port of the Oracle EBS web services.
|*SSL* |If enabled, will attempt to make web services calls using HTTPS instead of HTTP.
|*TrustStore file name* |Enter the path to a custom TrustStore for HTTPS calls (optional).
|*TrustStore password* |Enter the password for the TrustStore (optional).
|*Disable Common Name Checking* |Disables Common Name (CN) Checking on SSL certificates (optional).
|*Responsibility Name* |Enter the responsibility name that is needed to execute the operation.
|*Responsibility Appl. Name* |Enter the application short name that is needed to execute the operation.
|*Security Group Name* |Enter the security group key of the Oracle EBS instance (optional).
|*NLS language* |Enter the NLS language of the Oracle EBS instance (optional).
|*Org. ID* |Enter the organization ID of the Oracle EBS instance (optional).
|===

....
------

[tabs]
------
[tab,title="Studio Visual Editor"]
....
Follow these steps to create an Oracle EBS global element for Business Events or XML Gateway Outbound subscriptions:

. Click the *Global Elements* tab at the base of the canvas.
. On the Global Mule Configuration Elements screen, click *Create*.
. In the *Choose Global Type wizard*, expand *Connector Configuration*, and then select *OracleEBS: JMS Configuration*.
+
image:oracle_ebs_connector_config.png[oracle_ebs_connector_config]
+
. Click *OK*.
. Configure the parameters according to the table below.
+
[%header,cols="2*a"]

|===
|Field|Description
|*Name* |Enter a name for the configuration with which it can be referenced later.
|*Username* |Username for the Oracle EBS database.
|*Password* |Enter the password for the username.
|*Host* |Enter the host of the Oracle EBS database.
|*Port* |Enter the port of the Oracle EBS database.
|*Database SID* |Enter the SID of the database.
|===
+
image:oracle_ebs_jms_global_element.png[oracle_ebs_jms_global_element]
+
. From the same global element properties window, load the required external dependency JARs:
+
image:oracle-ebs-jar-deps.png[req deps]
+
.. Click on the *Modify* button next to *Oracle AQ API*, and select the JAR file corresponding to this library. You can retrieve this file from your EBS instance, at `$ORACLE_HOME/rdbms/jlib/aqapi.jar`.
.. Do the same for the *Oracle Database JDBC Driver*. This file can also be found in your instance, at the following path: `$ORACLE_HOME/jdbc/lib/ojdbc6.jar`.
+
. Click *Test Connection* and confirm receipt of the _Connection Successful_ message.
. Click *OK* to save the global connector configurations.
+


....
[tab,title="XML Editor"]
....
Ensure you have included the Oracle EBS namespaces in your configuration file.

[source, xml, linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
xmlns:oracle-ebs = " http://www.mulesoft.org/schema/mule/oracle-ebs"
xsi:schemaLocation="
http: //www.mulesoft.org/schema/mule/core
http: //www.mulesoft.org/schema/mule/core/current/mule.xsd
 http://www.mulesoft.org/schema/mule/oracle-ebs http://www.mulesoft.org/schema/mule/oracle-ebs/current/mule-oracle-ebs.xsd
<!-- Add your flows and configuration elements here -->
</mule>
----

Follow these steps to configure a Oracle EBS connector in your application:

. Create a global Oracle EBS configuration outside and above your flows, using the following global configuration code.
+
[source, xml, linenums]
----
<oracle-ebs:jmsconfig name="OracleEBS__JMS_Configuration" username="${username}" password="${password}" host="${host}" port="${port}" sid="${sidd}" doc:name="OracleEBS: JMS Configuration"/>
----
+
[%autowidth.spread]
|===
|*Parameter* |*Description*
|*Name* |Enter a name for the configuration with which it can be referenced later.
|*Username* |Username for the Oracle EBS database.
|*Password* |Enter the password for the username.
|*Host* |Enter the host of the Oracle EBS database is located.
|*Port* |Enter the port of the Oracle EBS database.
|*Database SID* |Enter the SID of the database.
|===

....
------

== 使用连接器

如果您希望*subscribe to queues*，请使用Oracle EBS连接器作为消息源。如果您的目标是*invoke web service operations*，则使用该连接器作为基于操作的出站连接器。

== 名称空间和架构

在Studio中设计应用程序时，将连接器从调色板拖放到Anypoint Studio画布上的操作应自动使用连接器*namespace*和*schema location*填充XML代码。

*Namespace:* `http://www.mulesoft.org/schema/mule/oracle-ebs`
*Schema Location:* `http://www.mulesoft.org/schema/mule/oracle-ebs/current/mule-oracle-ebs.xsd`

[TIP]
如果您是在Studio的XML编辑器或其他文本编辑器中手动编码Mule应用程序，请在`<mule>`标记内*Configuration XML*的标题中定义名称空间和模式位置。

[source, xml,linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:oracle-ebs="http://www.mulesoft.org/schema/mule/oracle-ebs"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/oracle-ebs
               http://www.mulesoft.org/schema/mule/oracle-ebs/current/mule-oracle-ebs.xsd">

      <!-- put your global configuration elements and flows here -->

</mule>
----

== 支持的Web服务端点

这是Oracle EBS连接器支持的支持的Web服务端点的列表。

*  **Receivables**
**  _ Dqm搜索服务_（`/oracle/apps/ar/hz/service/party/DqmSearchService`）+
*** 查找派对+
**  _电子邮件业务对象服务_（`/oracle/apps/ar/hz/service/party/EmailService`）+
*** 创建电子邮件+
*** 获取电子邮件+
*** 保存电子邮件+
*** 更新电子邮件+
**  _位置业务对象服务_（`/oracle/apps/ar/hz/service/party/LocationService`）+
*** 创建位置+
*** 获取位置+
*** 保存位置+
*** 更新位置+
**  _组织业务对象服务_（`/oracle/apps/ar/hz/service/party/OrganizationService`）+
*** 创建组织+
*** 获取组织+
*** 获取组织创建+
*** 获取组织更新+
*** 保存组织+
*** 更新组织+
**  _组织联系人业务对象服务_（`/oracle/apps/ar/hz/service/party/OrgContactService`）+
*** 创建组织联系人+
*** 获取组织联系人+
*** 保存组织联系人+
*** 更新组织联系人+
**  _组织客户业务对象服务_（`/oracle/apps/ar/hz/service/account/OrgCustomerService`）+
*** 创建组织客户+
*** 获取组织Customer +
*** 获取创建的组织客户+
*** 组织客户更新+
*** 保存组织Customer +
*** 更新组织客户+
**  _派对网站业务对象服务_（`/oracle/apps/ar/hz/service/party/PartySiteService`）+
*** 创建派对网站+
*** 获取派对网站+
*** 保存派对网站+
*** 更新派对网站+
**  _ Person业务对象服务_（`/oracle/apps/ar/hz/service/party/PersonService`）+
*** 创建人+
*** 获取人+
*** 获取人员创建+
*** 获取人员更新+
*** 保存个人+
*** 更新Person +
**  _人客户业务对象服务_（`/oracle/apps/ar/hz/service/account/PersonCustomerService`）+
*** 创建个人客户+
*** 获取个人客户+
*** 获取创建的个人客户+
*** 获取个人客户更新+
*** 保存个人客户+
*** 更新Person Customer +
**  _电话业务对象服务_（`/oracle/apps/ar/hz/service/party/PhoneService`）+
*** 创建电话+
*** 获得电话+
*** 保存电话号码+
*** 更新电话+
**  _关系业务对象服务_（`/oracle/apps/ar/hz/service/party/RelationshipService`）+
*** 创建关系+
*** 获取关系+
*** 保存关系+
*** 更新关系+
**  _ Web业务对象服务_（`/oracle/apps/ar/hz/service/party/WebService`）+
*** 创建Web +
*** 获取Web +
*** 保存Web +
*** 更新Web +

关于PL / SQL函数，连接器支持以下开箱即用的功能。

*  **Install Base**
**  _管理项目实例_（`CSI_ITEM_INSTANCE_PUB`）+
*** 复制项目实例+
*** 创建项目实例+
*** 获取项目实例+
*** 获取项目实例详细信息+
*** 更新项目实例+
*  **Order Management**
**  _流程订单API_（`OE_ORDER_PUB`）+
*** 删除Line +
*** 删除订单+
*** 获取订单+
将***  ID设置为值+
*** 锁定订单+
*** 处理标题+
*** 流程行+
*** 流程订单+
*** 更新标题+
*** 更新行+
*** 值为ID +
**  _采购订单确认扩展列API_（`EC_POAO_EXT`）+
***  POAO填写Ext Lev01 +
***  POAO填充Ext Lev02 +
**  _采购订单更改确认扩展列API_（`EC_POCAO_EXT`）+
***  POCAO填入Ext Lev01 +
***  POCAO Populate Ext Lev02 +
**  _销售协议API_（`OE_BLANKET_PUB`）+
*** 处理毛毯+
**  _ Ship Conformation_（`OE_SHIP_CONFIRMATION_PUB`）+
*** 运送零点+
*  **Payables**
**  _供应商Package_（`AP_VENDOR_PUB_PKG`）+
*** 创建供应商+
*** 创建供应商联系人+
*** 创建供应商站点+
*  **Receivables**
**  _发票创建_（`AR_INVOICE_API_PUB`）+
*** 创建发票+
*** 创建单个发票+
*  **Trading Community**
**  _位置_（`HZ_LOCATION_V2PUB`）+
*** 创建位置+
*** 创建地点1 +
*** 更新位置+
*** 更新位置1 +
**  _联系人_（`HZ_PARTY_CONTACT_V2PUB`）+
*** 创建组织联系人+
*** 创建组织联系人角色+
*** 更新组织联系人+
*** 更新组织联系人角色+

=== 订阅队列或主题

* 至*subscribe to a queue or topic*（例如XML网关出站队列或业务事件主题），您需要将连接器拖至流程的"Source"部分。完成之后，并选择连接器配置，您必须从*Operation*下拉菜单中选择您希望订阅的队列/主题。

. 在Anypoint Studio中创建一个新的Mule项目。
. 将新的Flow范围元素拖到画布上。
. 在流程开始时添加一个Oracle EBS连接器作为入站端点。
. 将记录器拖到流程的流程部分。
. 根据下表配置连接器的参数。
+
[%autowidth.spread]
|===
| *Field*  | *Description*
| *Display Name*  |为应用程序中的连接器输入唯一标签。
| *Connector Configuration*  |选择您创建的"OracleEBS: JMS Configuration"元素。
| *Operation*  |从下拉列表中选择您想要订阅的队列或主题。在本例中，我们选择*Business Events*，但也可以选择*XML Gateway Outbound*。
| *Durable Subscription*  |（仅适用于Business Events）如果选中，将创建一个持久订阅。这意味着如果客户端失去连接性，在此期间上传到该主题的所有消息将在重新建立后立即被检索。
| *Subscription Name*  |（仅适用于商业活动）如果您希望创建持久订阅，您可以指定其名称。如果不是，则默认为"muleBusinessEvents"。
|===
. 保存您的配置。

商业活动的== 自定义属性
[NOTE]
====
要为除默认属性之外的业务事件设置*custom attributes*，您需要手动添加属性，并创建对该事件的订阅。
====

. 首先，*add attributes*到Oracle EBS业务事件。您甚至可以在PL / SQL客户端中运行脚本，以创建代表您需要的自定义消息或事件属性的自定义键值对。
+
////
//链接到知识库文章一旦准备就绪
[source,code,linenums]
----
CREATE OR REPLACE PROCEDURE xx_modify_event_parameters
(
p_subscription_guid IN RAW,
              	p_event             IN OUT NOCOPY wf_event_t
)  return varchar2 is
l_plist   wf_parameter_list_t := p_event.getparameterlist ();
	Begin

    -- Add code for adding new attributes to the event list

wf_event.addparametertolist (
p_name => 'QUOTE_HEADER_ID',
p_value => p_qte_header_rec.quote_header_id,
p_parameterlist => l_plist
);

		RETURN 'SUCCESS';

     EXCEPTION
          WHEN OTHERS
          THEN
             wf_core.context (
                'xxu_bes',
                'inv_po_matching',
                p_event.geteventname (),
                p_subscription_guid
             );
             wf_event.seterrorinfo (p_event, 'ERROR');
             RETURN 'ERROR';
	End;
----
////
+
. 现在为您分配新属性的活动添加订阅。
.. 转到*Workflow Administrator Web Applications*职责。选择你想修改的*Business Events*。
.. 点击加号为订单添加订单。
+
image:oracle-add-subscription.png[添加脚标加号]
+
.. 点击*Create Subscription*。
+
image:oracle-create-subscription.png[创建订阅]
+
. 为每个字段提供适当的值。查找下面的字段和值的说明，以及您在其中配置这些字段的工作区的一些屏幕截图。
..  *Subscriber*
...  *System*  - 指定您需要订阅该事件的系统
..  *Triggering Event*
...  *Event Filter*  - 输入此订阅应该触发的业务事件的名称。
..  *Execution Condition*
...  *Phase*  - 大于或等于100的值意味着订阅以异步方式触发。为此字段输入"100"。
...  *Status*  - “启用”
...  *Rule Data*  - “消息”
..  *Action Type*
...  *Action Type*  -  "Custom"
+
image:event-subscription-fields.png[事件订阅字段]
+
image:custom-event-subscription-fields.png[自定义事件订阅字段]

此时，应该设置为使用Oracle EBS连接器从排队的业务事件中检索这些自定义属性。

=== 调用Web服务操作

* 要*invoke a web service operation*，您必须将连接器拖到您的流程的"Process"部分并填写其输入参数。如果您需要调用的操作是作为Web服务公开的PL / SQL函数，请选择*Invoke PL/SQL*操作，然后从显示的*PL/SQL*和*Function*下拉菜单中进行选择在常规选项卡中。

. 在Anypoint Studio中创建一个新的Mule项目。
. 添加合适的Mule入站端点，例如HTTP侦听器或文件端点，以开始流程。
. 将Oracle EBS连接器拖到画布上，然后选择它以打开属性编辑器。
. 根据以下内容配置连接器的参数。
+
image:oracle_ebs_config.png[oracle_ebs_config]
+
[%autowidth.spread]
|===
| *Field*  | *Description*
| *Display Name*  |为应用程序中的连接器输入唯一标签。
| *Connector Configuration*  |连接到链接到此连接器的全局元素。全局元素封装有关到目标资源或服务的连接的可重用数据。选择您刚刚创建的全局"OracleEBS: Configuration"元素。
| *Operation*  |从下拉菜单中选择操作。您可以选择任何显示的操作或*Invoke PL/SQL*操作，它允许您执行从PL / SQL发布的Web服务。
| *Params*  |完成所选操作所需的参数。如果选择了*Invoke PL/SQL*操作，则需要使用要执行的操作选择*PL/SQL*和*Function*参数。
|===
. 保存您的配置。
. 如果选择*Invoke PL/SQL*操作，则需要添加一个*Transform Message*转换器以将流中的值映射到PL / SQL操作的输入参数。

==  PL / SQL操作用例

继续下面的步骤以查看一个基本示例，该示例从自定义PL / SQL Web服务执行PL / SQL操作。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:oracle-ebs-plsql-example.png[oracle-ebs-plsql-example]

. Create a Mule project in Anypoint Studio.
. Drag an HTTP connector onto the canvas, then select it to open the properties editor console.
. Add a new HTTP Listener Configuration global element:
.. In *General Settings*, click the plus sign (*+*):
+
image:connector-configuration-dropdown-general.png[connector-configuration-dropdown-general]
+
.. Configure the following HTTP parameters:
+
[%header,cols="2*a"]
|======
|Field|Value
|*Display Name* |HTTP_Listener_Configuration
|*Port* |8081
|======
+
.. Reference the HTTP Listener Configuration global element by selecting the configuration created in the preview step, from the *Connector Configuration* dropdown:
. Drag the Oracle EBS connector onto the canvas, then configure it according to the steps below:
.. Add a new "OracleEBS: Configuration" Global Element by clicking the plus sign (*+*).
+
.. Configure the global element according to the table below:
+
[%header,cols="2*a"]
|=======
|Field|Description
|*Name* |Enter a name you prefer
|*Username* |Username to log into Oracle EBS web services.
|*Password* |Password for the username.
|*Host* |Enter the host of the Oracle EBS instance.
|*Port* |Enter the port of the Oracle EBS web services.
|*SSL* |If enabled, will attempt to make web services calls using HTTPS instead of HTTP.
|*TrustStore file name* |Enter the path to a custom TrustStore for HTTPS calls (optional).
|*TrustStore password* |Enter the password for the TrustStore (optional).
|*Disable Common Name Checking* |Disables Common Name (CN) Checking on SSL certificates (optional).
|*Responsibility Name* |Enter the responsibility name that is needed to execute the operation.
|*Responsibility Appl. Name* |Enter the application short name that is needed to execute the operation.
|*Security Group Name* |Enter the security group key of the Oracle EBS instance (optional).
|*NLS language* |Enter the NLS language of the Oracle EBS instance (optional).
|*Org. ID* |Enter the organization ID of the Oracle EBS instance (optional).
|*Custom PL/SQL web services* |Select *Create Object manually*, click the button on the right and add all custom PL/SQL web services you want to execute. In the example we use FND_WEB_SEC.
|=======
+
.. Click *Test Connection* to confirm that Mule can connect with the Oracle EBS instance. If the connection is successful, click *OK* to save the configurations. If unsuccessful, revise or correct any incorrect parameters, then test again.
. Back in the properties editor of the Oracle EBS connector, configure the remaining parameters according to the table below:
+
[%autowidth.spread]
|=====
|*Field* |*Value*
|*Display Name* |Testing custom PL/SQL operation (or any other name you prefer)
|*Connector Configuration* |Oracle (Enter name of the global element you have created)
|*Operation* |Invoke PL/SQL
|*PL/SQL* |Fnd Web Sec (custom)
|*Function* |Validate Login
|*Input Reference* |From Message `#[payload]`
|=====
+
image:oracle_ebs_connector_operation_config.png[oracle_ebs_connector_operation_config]
. Add a *Transform Message* transformer between the HTTP endpoint and the Oracle EBS connector to map the data in the HTTP endpoint to the structure required by the Oracle EBS connector.
. Configure the Input properties of the *Transform Message* component according to the steps below.
+
.. On the left, under the *Inbound Properties* tree, click on *http.query.params* and then click on the *Edit* button.
Enter the following code:
+
----
%dw 1.0
%output application/java
---
{
	"user": "sampleUser",
	"password": "samplePassword"
}
----
+
.. Enter the following DataWeave code into the *Transform Message* text editor:
+
----
%dw 1.0
%output application/xml
%namespace ns0
http://xmlns.oracle.com/apps/fnd/soaprovider/plsql/fnd_web_sec/validate_login/
---
{
	ns0#InputParameters: {
		ns0#"P_USER": inboundProperties."http.query.params".user,
		ns0#"P_PWD": inboundProperties."http.query.params".password
	}
}
----
+
. Add a *DOM to XML* transformer after the Oracle EBS Connector.
. Add a *Logger* scope right after the *DOM to XML* transformer to print the data that is being received from the Oracle EBS connector in the Mule Console. Configure the Logger according to the table below:
+
[%header,cols="2*a"]
|===
|*Field* |*Value*
|*Display Name* |Logger (or any other name you prefer)
|*Message* |Output from Transformer is `"\### EBS Test #[payload]"`
|*Level* |INFO (Default)
|===
+
. Add a *Catch Exception Strategy* and add a logger component inside it. Configure the logger message attribute with `#[payload]`, and set the level to ERROR.
+
[%header,cols="2*a"]
|===
|*Field* |*Value*
|*Display Name* |Logger (or any other name you prefer)
|*Message* |Error: #[payload]
|*Level* |ERROR
|===
+
. Save and run the project as a Mule Application by right-clicking the project name in the Package Explorer, selecting *Run As* > *Mule Application*.
.. Open a browser and load the following URL: `http://localhost:8081/?user=<username>&password=<password>`, replacing the _<username>_ and _<password>_ placeholders with a set of credentials.
.. You should see the response of the FND_WEB_SEC PL/SQL operation, informing you if the provided credentials are valid or invalid.

....
[tab,title="XML Editor"]
....

=== Example Code

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:oracle-ebs="http://www.mulesoft.org/schema/mule/oracle-ebs" xmlns:mulexml="http://www.mulesoft.org/schema/mule/xml" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/xml http://www.mulesoft.org/schema/mule/xml/current/mule-xml.xsd
http://www.mulesoft.org/schema/mule/ee/dw http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/oracle-ebs http://www.mulesoft.org/schema/mule/oracle-ebs/current/mule-oracle-ebs.xsd">
    <http:listener-config name="HTTP_Listener_Configuration" host="0.0.0.0" port="8081" doc:name="HTTP Listener Configuration"/>
    <oracle-ebs:config name="OracleEBS__Configuration" username="${username}" password="${password}" host="${host}" port="${port}" responsibilityName="${responsibilityName}" responsibilityApplName="${responsibilityApplName}" doc:name="OracleEBS: Configuration">
        <oracle-ebs:custom-pl-sql-name-list>
            <oracle-ebs:custom-pl-sql-name-list>FND_WEB_SEC</oracle-ebs:custom-pl-sql-name-list>
        </oracle-ebs:custom-pl-sql-name-list>
    </oracle-ebs:config>
    <flow name="oracle-ebs-exampleFlow">
        <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:input-inbound-property doc:sample="map_string_string.dwl" propertyName="http.query.params"/>
            <dw:set-payload><![CDATA[%dw 1.0
%output application/xml
%namespace ns0
http://xmlns.oracle.com/apps/fnd/soaprovider/plsql/fnd_web_sec/validate_login/
---
{
	ns0#InputParameters: {
		ns0#"P_USER": inboundProperties."http.query.params".user,
		ns0#"P_PWD": inboundProperties."http.query.params".password
	}
}]]></dw:set-payload>
        </dw:transform-message>
        <oracle-ebs:invoke-pl-sql config-ref="OracleEBS__Configuration" type="fnd_web_sec||VALIDATE_LOGIN" doc:name="OracleEBS"/>
        <mulexml:dom-to-xml-transformer doc:name="DOM to XML"/>
        <logger message="### EBS Test #[payload]" level="INFO" doc:name="Logger"/>
    </flow>
    <catch-exception-strategy name="oracle-ebs-exampleCatch_Exception_Strategy">
        <logger message="Error: #[payload]" level="ERROR" doc:name="Logger"/>
    </catch-exception-strategy>
</mule>
----

....
------

== 商业活动用例

本用例描述了如何配置基本流程以便将连接器用作源。更具体地说，该示例应用程序将订阅Business Events主题并记录从该主题到达的所有消息。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:oracle-ebs-biz-events-use-case.png[oracle_ebs_example_flow_source]

. Create a new Mule project in Anypoint Studio.
. Drag a new *Flow* scope element onto the canvas.
. Add an Oracle EBS connector as an inbound endpoint at the beginning of the flow.
+
image:oracle_ebs_config_source_2.png[oracle_ebs_config_source_2]
+
.. Add a new "OracleEBS: JMS Configuration" Global Element by clicking the green plus sign (*+*).
.. Configure the global element according to the table below:
+
[%header,cols="2*a"]
|=======
|Field|Description
|*Name* |Enter a name for the configuration with which it can be referenced later.
|*Username* |Username for the Oracle EBS database.
|*Password* |Enter the password for the username.
|*Host* |Enter the host of the Oracle EBS database.
|*Port* |Enter the port of the Oracle EBS database.
|*Database SID* |Enter the SID of the database.
|*Required dependencies* |Select the location in your local file system for the Oracle AQ API and Oracle JDBC Driver JAR files. Both are used in the Test Connection process and subscription to queues and topics.
|=======
+
.. Click *Test Connection* to confirm that Mule can connect with the Oracle EBS instance. If the connection is successful, click *OK* to save the configurations. If unsuccessful, revise or correct any incorrect parameters, then test again.
. Back in the properties editor of the Oracle EBS connector, configure the remaining parameters according to the table below:
+
[%autowidth.spread]
|=====
|*Field* |*Value*
|*Display Name* |Business Events (or any other name you prefer)
|*Connector Configuration* |OracleEBS__Configuration (Enter name of the global element you have created)
|*Operation* |Business events
|*Durable Subscription* |If checked, a durable subscription will be created. This means that if the client loses connectivity, all messages uploaded to the topic during this period will be retrieved as soon as it is restablished.
|*Subscription Name* |If you wish to create a durable subscription, you can specify its name. If not, it will default to "muleBusinessEvents".
|=====
+
. Add a *Logger* scope right after the EBS Connector, to print the messages received from the Business Events topic in the Mule Console. Configure the Logger according to the table below:
+
[%header,cols="2*a"]
|===
|*Field* |*Value*
|*Display Name* |Logger (or any other name you prefer)
|*Message* |`#[payload]`
|*Level* |INFO (Default)
|===
+
. Save and run the project as a Mule Application by right-clicking the project name in the Package Explorer, selecting *Run As* > *Mule Application*.
.. For every Business Event that is fired, you will see the corresponding message taken from the queue in the console log.
....
[tab,title="XML Editor"]
....

=== Example Code

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:oracle-ebs="http://www.mulesoft.org/schema/mule/oracle-ebs" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/oracle-ebs http://www.mulesoft.org/schema/mule/oracle-ebs/current/mule-oracle-ebs.xsd">
    <oracle-ebs:jmsconfig name="OracleEBS__JMS_Configuration" doc:name="OracleEBS: JMS Configuration" host="${host}" password="${password}" port="${port}" sid="${sid}" username="${username}"/>
    <flow name="demo-business-eventsFlow">
        <oracle-ebs:business-events config-ref="OracleEBS__JMS_Configuration" doc:name="OracleEBS (Streaming)"/>
        <logger message="#[payload]" level="INFO" doc:name="Logger"/>
    </flow>
</mule>
----

....
------

== 资源

* 有关Oracle EBS的更多信息，请访问 link:http://www.oracle.com/us/products/applications/ebusiness/overview/index.html[Oracle网站]。
* 访问Oracle EBS连接器 link:/release-notes/oracle-e-business-suite-ebs-connector-release-notes[发行说明]。
